--- a/app/index.html
+++ b/app/index.html
@@ -19,11 +19,43 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-   <div>
-     <div class="text">classical plinth</div>
-     <div class="text">chess board</div>
-     <div class="text">red/pink sun disk</div>
-     <div class="text">cyan/navy blue gradient</div>
+   <div id="content">
+     <div id="help">
+       <h3>Click/tap anywhere to display the user interface for choosing which
+         token to display.</h3>
+     </div>
+     <div id="ui">
+       <form id="token-id-form">
+         <label for="token-id-select">Show token: </label>
+         <select id="token-id-select">
+           <option value="1">1</option>
+           <option value="2">2</option>
+           <option value="3">3</option>
+           <option value="4">4</option>
+           <option value="5">5</option>
+           <option value="6">6</option>
+           <option value="7">7</option>
+           <option value="8">8</option>
+           <option value="9">9</option>
+           <option value="10">10</option>
+           <option value="11">11</option>
+           <option value="12">12</option>
+           <option value="13">13</option>
+           <option value="14">14</option>
+           <option value="15">15</option>
+           <option value="16">16</option>
+         </select>
+         <br /><br />
+         <button type="button" id="token-id-cancel">Cancel</button>
+         <button type="button" id="token-id-ok">OK</button>
+       </form>
+     </div>
+     <div id="texts">
+       <div class="text"></div>
+       <div class="text"></div>
+       <div class="text"></div>
+       <div class="text"></div>
+     </div>
    </div>
   
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
