--- a/app/offline-display-version.html
+++ b/app/offline-display-version.html
@@ -11,11 +11,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
-  <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700" rel="stylesheet">
-
-  <script type="text/javascript" src="./path/to/web3.min.js"></script>
-  <script type="text/javascript" src="./path/to/ethers.min.js"></script>
-  <script type="text/javascript" src="./dist/truffle-contract.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700" rel="stylesheet"> 
 </head>
 
 <body>
@@ -31,21 +27,36 @@
      <div id="ui">
        <form id="token-id-form">
          <label for="token-id-select">Show token: </label>
-         <select id="token-id-select"></select>
+         <select id="token-id-select">
+           <option value="1">1</option>
+           <option value="2">2</option>
+           <option value="3">3</option>
+           <option value="4">4</option>
+           <option value="5">5</option>
+           <option value="6">6</option>
+           <option value="7">7</option>
+           <option value="8">8</option>
+           <option value="9">9</option>
+           <option value="10">10</option>
+           <option value="11">11</option>
+           <option value="12">12</option>
+           <option value="13">13</option>
+           <option value="14">14</option>
+           <option value="15">15</option>
+           <option value="16">16</option>
+         </select>
          <br /><br />
          <button type="button" id="token-id-cancel">Cancel</button>
          <button type="button" id="token-id-ok">OK</button>
        </form>
      </div>
-     <div id="texts">
-     </div>
+     <div id="texts"></div>
    </div>
   
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/shared.js"></script>
-  <script src="js/online.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
