--- a/app/offline-display-version.html
+++ b/app/offline-display-version.html
@@ -27,24 +27,7 @@
      <div id="ui">
        <form id="token-id-form">
          <label for="token-id-select">Show token: </label>
-         <select id="token-id-select">
-           <option value="1">1</option>
-           <option value="2">2</option>
-           <option value="3">3</option>
-           <option value="4">4</option>
-           <option value="5">5</option>
-           <option value="6">6</option>
-           <option value="7">7</option>
-           <option value="8">8</option>
-           <option value="9">9</option>
-           <option value="10">10</option>
-           <option value="11">11</option>
-           <option value="12">12</option>
-           <option value="13">13</option>
-           <option value="14">14</option>
-           <option value="15">15</option>
-           <option value="16">16</option>
-         </select>
+         <select id="token-id-select"></select>
          <br /><br />
          <button type="button" id="token-id-cancel">Cancel</button>
          <button type="button" id="token-id-ok">OK</button>
@@ -57,6 +40,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
   <script src="js/shared.js"></script>
+  <script src="../aesthetic/aesthetic.js"></script>
   <script src="js/offline.js"></script>
 </body>
 
