Implement ERC721 Enumerable interface with simple code to help UI. Add tests for that. Online UI version JS debugged.

--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,9 @@
 
   <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700" rel="stylesheet">
 
-  <script type="text/javascript" src="./path/to/web3.min.js"></script>
-  <script type="text/javascript" src="./path/to/ethers.min.js"></script>
-  <script type="text/javascript" src="./dist/truffle-contract.min.js"></script>
+  <script type="text/javascript" src="./js/web3.min.js"></script>
+<!--  <script type="text/javascript" src="./js/ethers.min.js"></script>-->
+  <script type="text/javascript" src="./js/truffle-contract.min.js"></script>
 </head>
 
 <body>
